# MultiGPUGridder

./: .gitignore  CASFromVol.m  CASImgsFromImgs.m  README.md  Save_Kernel_Input_Script.m  getMaxAxes.m  gpuBackProjectKernel.cu  gpuBackProjectKernel.ptx  gpuBatchGridder.m  gpuForwardProjectKernel.cu  gpuForwardProjectKernel.ptx  gpuGridder.m  imgsFromCASImgs.m  index.html  run_example.m  run_example.m~  testGpuObj.m  volFromCAS.m
CUDA_mex_files/: CPU_CUDA_Memory.cpp  CPU_CUDA_Memory.h  CUDA_Gridder.cpp  CUDA_Gridder.h  CUDA_Gridder_Matlab_Class.m  MemoryManager.cpp  MemoryManager.h  MultiGPUGridder.cpp  MultiGPUGridder.h  MultiGPUGridder_Matlab_Class.m  Performance_Test.m  Performance_Test.m~  RunExample.m  RunExample.m~  Vol_Preprocessing.m  a.out  gpuBackProject.h  gpuBackProjectKernel.cu  gpuForwardProject.h  gpuForwardProjectKernel.cu  mexFunctionWrapper.cpp  mexFunctionWrapper.h  run_example.m  run_example.m~
MultiGPUGridder_Doxygen/html/: _abstract_filter_8h.html  _abstract_filter_8h__dep__incl.map  _abstract_filter_8h__dep__incl.md5  _abstract_filter_8h__incl.map  _abstract_filter_8h__incl.md5  _abstract_filter_8h_source.html  _abstract_gridder_8cpp.html  _abstract_gridder_8cpp__incl.map  _abstract_gridder_8cpp__incl.md5  _abstract_gridder_8cpp_source.html  _abstract_gridder_8h.html  _abstract_gridder_8h__dep__incl.map  _abstract_gridder_8h__dep__incl.md5  _abstract_gridder_8h__incl.map  _abstract_gridder_8h__incl.md5  _abstract_gridder_8h_source.html  _add_volume_filter_8h.html  _add_volume_filter_8h__dep__incl.map  _add_volume_filter_8h__dep__incl.md5  _add_volume_filter_8h__incl.map  _add_volume_filter_8h__incl.md5  _add_volume_filter_8h_source.html  _add_volume_test_8m.html  _add_volume_test_8m_source.html  _back_project_tests_8m.html  _back_project_tests_8m_source.html  _c_a_s_from_vol___gridder_8m.html  _c_a_s_from_vol___gridder_8m_source.html  _c_a_s_imgs_from_imgs_8m.html  _c_a_s_imgs_from_imgs_8m_source.html  _c_a_s_to_complex_filter_8h.html  _c_a_s_to_complex_filter_8h__dep__incl.map  _c_a_s_to_complex_filter_8h__dep__incl.md5  _c_a_s_to_complex_filter_8h__incl.map  _c_a_s_to_complex_filter_8h__incl.md5  _c_a_s_to_complex_filter_8h_source.html  _c_a_s_to_complex_test_8m.html  _c_a_s_to_complex_test_8m_source.html  _c_make_lists_8txt.html  _c_make_lists_8txt_abc98f85233d05935b25da1e038fc21cd_icgraph.map  (+779 more)
MultiGPUGridder_Doxygen/html/search/: all_1.js  all_10.js  (+94 more)
mex_files/: CPU_CUDA_Memory.cpp  CPU_CUDA_Memory.h  CUDA_Gridder.cpp  CUDA_Gridder.h  CUDA_Gridder_Matlab_Class.m  mexFunctionWrapper.cpp  mexFunctionWrapper.h  run_example.m  run_example.m~
src/: AbstractGridder.cpp  AbstractGridder.h  AddVolumeFilter.cu  AddVolumeFilter.h  CASToComplexFilter.cu  CMakeLists.txt  CUDA_FFT (copy).cpp  CUDA_FFT.cpp  ComplexToCASFilter.cu  ComplexToCASFilter.h  ComplexToRealFilter.cu  CropVolumeFilter.cu  CropVolumeFilter.h  DivideScalarFilter.cu  DivideVolumeFilter.cu  FFTShift2DFilter.cu  FFTShift2DFilter.h  FFTShift3DFilter.cu  MemoryManager.cpp  MemoryManager.h  MemoryStruct.h  MemoryStructGPU.h  MultiGPUGridder.cpp  MultiGPUGridder.h  MultiGPUGridder_Matlab_Class.m  MultiGPUGridder_Python.py  MultiplyVolumeFilter.cu  MultiplyVolumeFilter.h  PadVolumeFilter.cu  PadVolumeFilter.h  RealToComplexFilter.cu  Vol_Preprocessing.m  gpuBackProject.cu  gpuBackProject.h  gpuBackProjectKernel.cu  gpuFFT.cpp  gpuFFT.cu  gpuFFT.h  gpuForwardProject.h  gpuForwardProjectKernel.cu  (+12 more)
src/Documentation/: Doxygen.config  MainPage.md  MainPage.txt
src/Examples/: MatlabExample.m  MultiGridderTimingTest.m  Performance_Test.m  RunBatchTest.m  TimingTestScript.m  TimingTestScript2.m  run_example.m
src/Filters/: AbstractFilter.cu  AbstractFilter.h  AddVolumeFilter.cu  AddVolumeFilter.h  CASToComplexFilter.cu  CASToComplexFilter.h  ComplexToCASFilter.cu  ComplexToCASFilter.h  ComplexToRealFilter.cu  ComplexToRealFilter.h  CropVolumeFilter.cu  CropVolumeFilter.h  DivideScalarFilter.cu  DivideScalarFilter.h  DivideVolumeFilter.cu  DivideVolumeFilter.h  FFTShift2DFilter.cu  FFTShift2DFilter.h  FFTShift3DFilter.cu  FFTShift3DFilter.h  MultiplyVolumeFilter.cu  MultiplyVolumeFilter.h  PadVolumeFilter.cu  PadVolumeFilter.h  RealToComplexFilter.cu  RealToComplexFilter.h
src/Gridders/: AbstractGridder.cpp  AbstractGridder.h  MultiGPUGridder.cpp  MultiGPUGridder.h  gpuGridder.cpp  gpuGridder.h
src/Gridders/CPU/: mex_forward_project.c
src/Matlab/: MultiGPUGridder_Matlab_Class.m  getPreComp.m  run_example.m
src/Matlab/utils/: CASFromVol_Gridder.m  CASImgsFromImgs.m  CASImgsFromImgsCTFs.m  create_uniform_axes.m  easyMontage.m  fftshift2.m  get_axes_from_n_rot.m  imgsFromCASImgs.m  kernelAlpha.m  volFromCAS.m  volFromCAS_Gridder.m
src/Mex/: mexCreateGridder.cpp  mexDeleteGridder.cpp  mexFunctionWrapper.cpp  mexFunctionWrapper.h  mexMultiGPUBackProject.cpp  mexMultiGPUForwardProject.cpp  mexMultiGPUGetVolume.cpp  mexMultiGPUReconstructVolume.cpp  mexSetVariables.cpp
src/Projection/: gpuBackProject.cu  gpuBackProject.h  gpuForwardProject.cu  gpuForwardProject.h  gpuProjection.cpp  gpuProjection.h
src/Structs/: DeviceMemory.h  HostMemory.h  HostMemoryGPU.h  MemoryStruct.h  MemoryStructGPU.h  gpuErrorCheck.h
src/Tests/: AddVolumeTest.m  BackProjectTests.m  CASToComplexTest.m  ComplexToCAS.m  ComplexToCASTest.m  ComplexToReal.m  ComplexToRealTest.m  CropVolumeTest.m  DivideScalarTest.m  DivideVolumeTest.m  FFTShift2DTest.m  FFTShift3DTest.m  Filter_Unit_Tests.m  ForwardProjectTests.m  MultiplyVolumeTest.m  PadVolumeTest.m  RealToComplexTest.m  Run_Unit_Tests.m  mexAddVolume.cpp  mexComplexToCAS.cpp  mexCropVolume.cpp  mexDivideScalar.cpp  mexDivideVolume.cpp  mexFFTShift2D.cpp  mexMultiplyVolume.cpp  mexPadVolume.cpp  mexRealToComplex.cpp
src/Tests/MexWrappers/: mexCASToComplex.cpp  mexComplexToReal.cpp  mexFFTShift3D.cpp  mexPadVolume.cpp
src/unit_tests/: BackProjectTests.m  FilterTests.m  ForwardProjectTests.m  Run_Unit_Tests.m
unit_tests/: BackProjectTests.m  ForwardProjectTests.m  Run_Unit_Tests.m
utils/: CASFromVol.m  FromCAS.m  getKernelFiltTable.m  getSizes.m  plotProfiles.m
